[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
md5 = "0.7.0"
rust-crypto = "^0.2"
fancy-regex = "0.11.0"
ndarray = "0.15.6"